# python-tutorials

./: .gitignore
fastapi-hello-world/: README.md  main.py  pyproject.toml
langchain/: pyproject.toml
langchain-aws-bedrock/: hello.py  pyproject.toml
langchain-aws-bedrock-with-nova-in-10-min/: README.md
langchain-aws-bedrock-with-nova-in-10-min/chat/: aws-bedrock-chat-with-nova.py  openai-chat.py
langchain/chat/: aws-bedrock-with-chaining-output-parser.py
pydantic-course/: README.md  pyproject.toml
pydantic-course/src/: contraints.py  custom-validators.py  strict-mode.py  validation.py
pydantic-in-10-min/: pyproject.toml
pydantic-in-10-min/src/: contraints.py  custom-validators.py  json-schema.py  serialization.py  strict-mode.py  validation.py
pydantic-v2-in-10-min/: pyproject.toml
pydantic-v2-in-10minutes/: main.py  pyproject.toml
python-in-10-min/: README.md  main.py  mymodule.py  pyproject.toml  sample.txt
python-in-10minutes/: main.py  pyproject.toml
python-in-10minutes/utils/: mymath.py
python-type-hints-in-10-min/: main.py  pyproject.toml
python-type-hints-in-10minutes/: main.py  pyproject.toml
