[project]
name = "langchain-aws-bedrock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.14",
    "langchain-aws>=0.2.10",
    "langchain-core>=0.3.29",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.1",
]
